--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 bind h split-window -v
 bind v split-window -h
 
-set mouse on
+set -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -15,7 +15,7 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-border-contrast true
-set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-plugins "git cpu-usage ram-usage battery"
 
 set -g status-position top
 run '~/.config/tmux/plugins/tpm/tpm'
